deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-ticker
  namespace: stock-ticker
  labels:
    app: stock-ticker
spec:
  type: ClusterIP
  selector:
    app: stock-ticker
  ports:
  - name: http
    port: 8080
    targetPort: http
